[34][AlexAu] fix: some bug in test datetime returned